--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-in-viewport": "^1.0.0-alpha.29",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.9.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
